# led_strip

./: .gitignore  CMakeLists.txt  README.md
include/: doom_fire.hpp  pattern_fill.hpp  ripple.hpp  vop.hpp  ws2812b.hpp
include/ipp/: doom_fire.ipp  pattern_fill.ipp  ripple.ipp  vop.ipp  ws2812b.ipp
src/: main.cpp  ws2812b.cpp
test/: CMakeLists.txt  test_vop.cpp
